APTOP_FASE2_002_Alteração na tela administrativa para gestão de programação de navios

--- a/CMSv4/Areas/ModuloAdmin/Views/ProgramacaoNavioAdmin/Index.cshtml
+++ b/CMSv4/Areas/ModuloAdmin/Views/ProgramacaoNavioAdmin/Index.cshtml
@@ -50,7 +50,7 @@
                         <th>@TAdm("Destino")</th>
                         <th>@TAdm("Deadline")</th>
                         <th>@TAdm("Data Importação")</th>
-                        <th>@TAdm("Usuario")</th>
+                        <th>@TAdm("Usuário")</th>
                         <th style="width: 50px;">@TAdm("Excluir")</th>
                     </tr>
                 </thead>
