APTOP_FASE2_001_Tela administrativa para gestão de custos e penalidades - Ajustes do teste

--- a/CMSv4/Areas/ModuloAdmin/Views/GestaoDeCustosPenalidades/_Historico.cshtml
+++ b/CMSv4/Areas/ModuloAdmin/Views/GestaoDeCustosPenalidades/_Historico.cshtml
@@ -15,7 +15,7 @@
             <div class="portlet-title">
                 <h4>
                     <img src="~/iconpack.axd/16/page_white_code" />
-                    @TAdm("Histórico Importação")
+                    @TAdm("Histórico de Importação")
                 </h4>
             </div>
             <div class="portlet-widgets">              
@@ -43,9 +43,10 @@
                     </thead>
                 </table>
             </div>
-        </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">@TAdm("Fechar")</button>
+
+            <div class="form-group text-right">
+                <a class="btn btn-white" href="@urlLista">@TAdm("Fechar")</a>
+            </div>
         </div>
     </div>
     
