--- a/CMSv4/Areas/ModuloAdmin/Views/GestaoDeCustosPenalidades/Item.cshtml
+++ b/CMSv4/Areas/ModuloAdmin/Views/GestaoDeCustosPenalidades/Item.cshtml
@@ -57,8 +57,14 @@
                 @*Usuario*@
                 <div class="form-group col-md-4">
                     <label>@TAdm("Usuário")</label>
-                    <input type="text" name="Usuario" id="Usuario" class="form-control" value="@usuario.Login" maxlength="50" readonly />                  
-                </div>       
+                    <input type="text" name="Usuario" id="Usuario" class="form-control" value="@usuario.Login" maxlength="50" readonly />
+                </div>
+
+                <div class="form-group col-md-4">
+                    <label>@TAdm("Data da Importacao")</label>
+                    <input type="text" name="DataAtualizacao" id="DataAtualizacao" class="form-control" value="@(Model.DataAtualizacao.HasValue ? Model.DataAtualizacao.Value.ToString("dd/MM/yyyy") : "")" readonly />
+
+                </div>
 
             </div>
 
@@ -92,7 +98,35 @@
                 DataAtualizacao: { required: true },
                 Usuario: { required: true, maxlength: 50 }
             }
-        });              
+        });     
+
+        function preencher() {
+            const usuario = $(Usuario).val();
+            const data = $(DataAtualizacao).val();
+
+            if (!data) {
+                const d = new Date();
+
+                const month = d.getMonth() + 1;
+                const day = d.getDate();
+
+                const output2 = d.getFullYear() + '/' +
+                    (month < 10 ? '0' : '') + month + '/' +
+                    (day < 10 ? '0' : '') + day;
+
+                const output = (day < 10 ? '0' : '') + day + '/' +
+                    (month < 10 ? '0' : '') + month + '/' +
+                    d.getFullYear();
+
+                $(DataImportacao).val(output)
+            }
+
+            if (!usuario) {
+                const usuarioLogado = $(UsuarioLogado).val();
+                $(Usuario).val(usuarioLogado)
+            }
+
+        };
    
     </script>
 }
