--- a/CMSv4/Areas/ModuloAdmin/Views/GestaoDeCustosPenalidades/Item.cshtml
+++ b/CMSv4/Areas/ModuloAdmin/Views/GestaoDeCustosPenalidades/Item.cshtml
@@ -118,7 +118,7 @@
                     (month < 10 ? '0' : '') + month + '/' +
                     d.getFullYear();
 
-                $(DataImportacao).val(output)
+                $(DataAtualizacao).val(output)
             }
 
             if (!usuario) {
