--- a/CMSv4/Areas/ModuloAdmin/Views/GestaoDeCustosPenalidades/_Historico.cshtml
+++ b/CMSv4/Areas/ModuloAdmin/Views/GestaoDeCustosPenalidades/_Historico.cshtml
@@ -1,16 +1,32 @@
 ﻿
-<div class="table-responsive">
-    <div id="toolbar"></div>
-    <table id="listaHistorico" class="table table-striped table-bordered table-hover table-blue">
-        <thead>
-            <tr>
-                <th>@TAdm("Data Importação")</th>
-                <th>@TAdm("Usuário")</th>
-                <th>@TAdm("Sucesso")</th>
-                <th>@TAdm("Finalizado")</th>
-                <th>@TAdm("Arquivo")</th>
-            </tr>
-        </thead>
-    </table>
+<div class="modal fade" id="modalHistorico" tabindex="-1" aria-labelledby="modalHistorico" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">@TAdm("Histórico de Importação")</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="table-responsive">
+                    <div id="toolbar"></div>
+                    <table id="listaHistorico" class="table table-striped table-bordered table-hover table-blue">
+                        <thead>
+                            <tr>
+                                <th>@TAdm("Data Importação")</th>
+                                <th>@TAdm("Usuário")</th>
+                                <th>@TAdm("Sucesso")</th>
+                                <th>@TAdm("Finalizado")</th>
+                                <th>@TAdm("Arquivo")</th>
+                            </tr>
+                        </thead>
+                    </table>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">@TAdm("Fechar")</button>
+            </div>
+        </div>
+    </div>
 </div>
-
