--- a/CMSv4/Areas/ModuloAdmin/Views/ProgramacaoNavioAdmin/Item.cshtml
+++ b/CMSv4/Areas/ModuloAdmin/Views/ProgramacaoNavioAdmin/Item.cshtml
@@ -209,8 +209,8 @@
 
                 @*DataAtualização*@
                 <div class="form-group col-md-4">
-                    <label>@TAdm("Data da Importacao")</label>
-                    <input type="text" name="DataImportacao" id="DataImportacao" class="form-control" value="@(Model.DataImportacao.HasValue ? Model.DataImportacao.Value.ToString("dd/MM/yyyy") : "")" readonly />
+                    <label>@TAdm("Data da Atualização")</label>
+                    <input type="text" name="DataImportacao" id="DataImportacao" class="form-control" value="@(Model.DataImportacao.HasValue ? Model.DataImportacao.Value.ToString("dd/MM/yyyy HH:mm:ss") : "")" readonly />
 
                 </div>
 
