--- a/CMSv4/Areas/ModuloAdmin/Views/ProgramacaoProposta/Item.cshtml
+++ b/CMSv4/Areas/ModuloAdmin/Views/ProgramacaoProposta/Item.cshtml
@@ -407,8 +407,8 @@
                 </div>
 
                 <div class="form-group col-md-3">
-                    <label>@TAdm("Data da Importacao")</label>
-                    <input type="text" name="DataImportacao" id="DataImportacao" class="form-control" value="@(Model.DataImportacao.HasValue ? Model.DataImportacao.Value.ToString("dd/MM/yyyy") : "")" readonly />
+                    <label>@TAdm("Data da Atualização")</label>
+                    <input type="datetime" name="DataImportacao" id="DataImportacao" class="form-control" value="@(Model.DataImportacao.HasValue ? Model.DataImportacao.Value.ToString("dd/MM/yyyy HH:mm:ss") : "")" readonly />
 
                 </div>
             </div>
