--- a/CMSv4/Areas/ModuloAdmin/Views/GestaoDeCustosPenalidades/Item.cshtml
+++ b/CMSv4/Areas/ModuloAdmin/Views/GestaoDeCustosPenalidades/Item.cshtml
@@ -61,8 +61,8 @@
                 </div>
 
                 <div class="form-group col-md-4">
-                    <label>@TAdm("Data da Importacao")</label>
-                    <input type="text" name="DataAtualizacao" id="DataAtualizacao" class="form-control" value="@(Model.DataAtualizacao.HasValue ? Model.DataAtualizacao.Value.ToString("dd/MM/yyyy") : "")" readonly />
+                    <label>@TAdm("Data da Atualização")</label>
+                    <input type="text" name="DataAtualizacao" id="DataAtualizacao" class="form-control" value="@(Model.DataAtualizacao.HasValue ? Model.DataAtualizacao.Value.ToString("dd/MM/yyyy HH:mm:ss") : "")" readonly />
 
                 </div>
 
