Alterações da tela de Gestão de Informações de Exportação: BL criada, @TAdm na função de Download, removido a obrigatoriedade do usuário no Form.Validate.

--- a/CMSv4/Areas/ModuloAdmin/Views/GestaoInformacoesExportacao/Index.cshtml
+++ b/CMSv4/Areas/ModuloAdmin/Views/GestaoInformacoesExportacao/Index.cshtml
@@ -163,7 +163,7 @@
                 },
                 error: function () {
                     $("#arquivoImportacao").addClass('alert alert-warning');
-                    $("#arquivoImportacao").html("Ocorreu um erro ao fazer o download do arquivo: arquivo inexistente");
+                    $("#arquivoImportacao").html("@TAdm("Ocorreu um erro ao fazer o download do arquivo: arquivo inexistente")");
 
                     setTimeout(function () {
                         $('#arquivoImportacao').removeClass('alert alert-warning');
