--- a/CMSv4/Areas/ModuloAdmin/Views/GestaoInformacoesExportacao/Item.cshtml
+++ b/CMSv4/Areas/ModuloAdmin/Views/GestaoInformacoesExportacao/Item.cshtml
@@ -77,8 +77,7 @@
         $('#form').validate({
             rules: {
                 PropostaComercial: { required: true, maxlength: 200 },
-                NumeroBooking: { required: true, maxlength: 200 },
-                Usuario: { required: true }
+                NumeroBooking: { required: true, maxlength: 200 }
             }
         });     
 
